removing elements by id done